[gd_scene load_steps=10 format=3 uid="uid://cexs3jaedttkh"]

[ext_resource type="Script" path="res://scripts/newPot.gd" id="1_5tolw"]
[ext_resource type="Texture2D" uid="uid://ceo8mmd6lpxfb" path="res://Assets/Sprites/MediumPot.png" id="2_b7y6s"]
[ext_resource type="Script" path="res://scripts/GrabArea.gd" id="3_ewk78"]
[ext_resource type="AudioStream" uid="uid://bl5fracburlcf" path="res://Assets/Audio/pickupPop.mp3" id="3_rppwn"]
[ext_resource type="AudioStream" uid="uid://db4snmllc4qor" path="res://Assets/Audio/setdownPop.mp3" id="4_816f1"]
[ext_resource type="AudioStream" uid="uid://bd881n01gxm8c" path="res://Assets/Audio/OpenPlantMenu.wav" id="6_vtmwl"]
[ext_resource type="AudioStream" uid="uid://d2vgttkv4qvxb" path="res://Assets/Audio/ClosePlantMenu.wav" id="7_1hit0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bshxx"]
size = Vector2(11, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucbj5"]
size = Vector2(11, 7)

[node name="MediumPot" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 130
collision_mask = 0
script = ExtResource("1_5tolw")

[node name="MediumPot" type="Sprite2D" parent="."]
position = Vector2(6, -16)
texture = ExtResource("2_b7y6s")

[node name="GrabArea" type="Area2D" parent="."]
position = Vector2(6, 0)
collision_layer = 2
collision_mask = 3
script = ExtResource("3_ewk78")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(-0.5, -3.5)
shape = SubResource("RectangleShape2D_bshxx")
debug_color = Color(0, 0.6, 0.701961, 0.113725)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.5, -3.5)
shape = SubResource("RectangleShape2D_ucbj5")
debug_color = Color(0, 0.6, 0.701961, 0.156863)

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rppwn")
bus = &"SFX"

[node name="PlaceSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_816f1")
bus = &"SFX"

[node name="PlantMarker" type="Marker2D" parent="."]
position = Vector2(6, 0)

[node name="OptionsOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vtmwl")
bus = &"SFX"

[node name="OptionsClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1hit0")
bus = &"SFX"

[connection signal="body_entered" from="GrabArea" to="." method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="GrabArea" to="." method="_on_grab_area_body_exited"]
[connection signal="mouse_entered" from="GrabArea" to="." method="_on_grab_area_mouse_entered"]
[connection signal="mouse_exited" from="GrabArea" to="." method="_on_grab_area_mouse_exited"]
